[package]
name = "elvui-refresh"
version = "0.4.0"
edition = "2021"
description = "A program to download, extract and install the latest version of ElvUI"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.68"
clap = { version = "4.2.7", features = ["derive"] }
colored = "2.0.0"
fs_extra = "1.3.0"
hyper = "0.14.26"
octocrab = "0.22.0"
reqwest = { version = "0.11.18", features = ["json"] }
serde = { version = "1.0.163", features = ["derive"] }
serde_json = "1.0.96"
tempfile = "3.5.0"
tokio = { version = "1.28.1", features = ["full"] }
zip = "0.6.6"
